# VINS-Mono

ar_demo/: CMakeLists.txt  package.xml
ar_demo/src/: ar_demo_node.cpp
camera_model/: CMakeLists.txt  package.xml
config/euroc/: euroc_config.yaml
data_generator/: CMakeLists.txt  package.xml
data_generator/src/: data_generator_node.cpp
feature_tracker/: CMakeLists.txt  package.xml
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  parameters.cpp  parameters.h
ground_truth_visualizer/: CMakeLists.txt  package.xml
ground_truth_visualizer/config/: ground_truth_visualizer_default.yaml
ground_truth_visualizer/include/ground_truth_visualizer/: ground_truth_visualizer.hpp
ground_truth_visualizer/launch/: visualizer.py
ground_truth_visualizer/src/: ground_truth_visualizer.cpp  ground_truth_visualizer_node.cpp
pose_graph/: CMakeLists.txt  package.xml
pose_graph/src/: keyframe.cpp  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
pose_graph/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/launch/: euroc.py
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  marginalization_factor.cpp  marginalization_factor.h  projection_factor.h  projection_td_factor.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
vins_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  visualization.cpp  visualization.h
