<?xml version="1.0"?>
<package format="3">
  <name>ground_truth_visualizer</name>

  <version>0.0.0</version>
  <description>Visualizes ground truth data</description>

  <maintainer email="r.dasilva@upm.es">Rodrigo Da Silva</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
