<?xml version="1.0"?>
<package format="3">
  <name>pose_graph</name>
  <version>0.0.0</version>
  <description>pose_graph package</description>

  <!-- Maintainer information -->
  <maintainer email="tony-ws@todo.todo">tony-ws</maintainer>

  <!-- License information -->
  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>Ceres</depend>
  <depend>Eigen3</depend>
  <depend>visualization_msgs</depend>
  <depend>camera_model</depend>

  <!-- Export section -->
  <export>
    <!-- Additional information can be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>

